[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/inimigo1.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 11.1533

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.131939, 2.37495 )
shape = SubResource( 1 )

[node name="LedgeRayCast" type="RayCast2D" parent="."]
position = Vector2( 3.10062, -0.329853 )
enabled = true
cast_to = Vector2( 0, 13 )

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 7, 4 )

[node name="ShootDelay" type="Timer" parent="."]
[connection signal="timeout" from="ShootDelay" to="." method="_on_ShootDelay_timeout"]
